--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="src/style.css" />
   </head>
 
-   <body>
+  <body>
     <header>
       <div class="nav-container">
         <div class="website-title">My Website</div>
@@ -18,7 +18,10 @@
           </ul>
         </nav>
       </div>
-      <div class="hero-banner" style="background-image: url('hero-banner.jpg');">
+      <div
+        class="hero-banner"
+        style="background-image: url('hero-banner.jpg');"
+      >
         <div class="hero-banner-content">
           <h1>Welcome to My Website</h1>
           <p>Learn more about us and what we do</p>
@@ -28,21 +31,48 @@
     </header>
     <main>
       <section>
-        <img src="https://via.placeholder.com/300x300/A0A0A0/FFFFFF/?text=Image" alt="Section 1 Image">
+        <img
+          src="https://via.placeholder.com/300x300/A0A0A0/FFFFFF/?text=Image"
+          alt="Section 1 Image"
+        />
         <h2>Section 1</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et sem auctor, pretium felis vel, imperdiet metus. Aenean id dui facilisis, volutpat mauris quis, fermentum metus. Suspendisse auctor, mauris eget rutrum volutpat, nulla ligula sollicitudin metus, et pretium metus magna id nisi.</p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et sem
+          auctor, pretium felis vel, imperdiet metus. Aenean id dui facilisis,
+          volutpat mauris quis, fermentum metus. Suspendisse auctor, mauris eget
+          rutrum volutpat, nulla ligula sollicitudin metus, et pretium metus
+          magna id nisi.
+        </p>
         <button>Learn More</button>
       </section>
       <section>
-        <img src="https://via.placeholder.com/300x300/A0A0A0/FFFFFF/?text=Image" alt="Section 2 Image">
+        <img
+          src="https://via.placeholder.com/300x300/A0A0A0/FFFFFF/?text=Image"
+          alt="Section 2 Image"
+        />
         <h2>Section 2</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et sem auctor, pretium felis vel, imperdiet metus. Aenean id dui facilisis, volutpat mauris quis, fermentum metus. Suspendisse auctor, mauris eget rutrum volutpat, nulla ligula sollicitudin metus, et pretium metus magna id nisi.</p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et sem
+          auctor, pretium felis vel, imperdiet metus. Aenean id dui facilisis,
+          volutpat mauris quis, fermentum metus. Suspendisse auctor, mauris eget
+          rutrum volutpat, nulla ligula sollicitudin metus, et pretium metus
+          magna id nisi.
+        </p>
         <button>Learn More</button>
       </section>
       <section>
-        <img src="https://via.placeholder.com/300x300/A0A0A0/FFFFFF/?text=Image" alt="Section 3 Image">
+        <img
+          src="https://via.placeholder.com/300x300/A0A0A0/FFFFFF/?text=Image"
+          alt="Section 3 Image"
+        />
         <h2>Section 3</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et sem auctor, pretium felis vel, imperdiet metus. Aenean id dui facilisis, volutpat mauris quis, fermentum metus. Suspendisse auctor, mauris eget rutrum volutpat, nulla ligula sollicitudin metus, et pretium metus magna id nisi.</p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et sem
+          auctor, pretium felis vel, imperdiet metus. Aenean id dui facilisis,
+          volutpat mauris quis, fermentum metus. Suspendisse auctor, mauris eget
+          rutrum volutpat, nulla ligula sollicitudin metus, et pretium metus
+          magna id nisi.
+        </p>
         <button>Learn More</button>
       </section>
     </main>
